[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Square.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 1, 10 )

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_transparent = true

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true

[node name="Square" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ceiling" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Ceiling"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Left" type="StaticBody" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -50, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Left"]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="Right" type="StaticBody" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 50, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Right"]
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="HeartContainer" type="Spatial" parent="."]

[node name="SpikeContainer" type="Spatial" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
